unpackaged/main/default/objects/APXTConga4__Document_History__c/APXTConga4__Document_History__c.object-meta.xml
<CustomObject>
    <label>Document History</label>
    <nameField>
        <displayFormat>DH-{0000}</displayFormat>
        <label>Document History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>