unpackaged/main/default/objects/APXTConga4__Document_History__c/fields/APXTConga4__Link_Text__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Link_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link Text</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>